public static class AnimatorParameters
{
    public const string TRIGGER_WINFAILSCREEN_OPEN = "Open";
    public const string TRIGGER_WINFAILSCREEN_HIDE = "Hide";
    public const string TRIGGER_PAUSEMENU_OPEN = "Open";
    public const string TRIGGER_PAUSEMENU_CLOSE = "Close";
    public const string TRIGGER_PAUSEMENU_HIDE = "Hide";
}
